// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`EsBuild tests getBundleJs - inline mode 1`] = `
"// src/test-fixtures/input.fixture.ts
function sayHello(toWhom) {
  const greet = \`hello \` + toWhom;
  return greet;
}
export {
  sayHello
};
"
`;

exports[`EsBuild tests getBundleJs - bad syntax 1`] = `[BundlerError: esbuild failed]`;

exports[`EsBuild tests getBundleJs - newline template 1`] = `
"// src/test-fixtures/newline-template.fixture.ts
function sayHello() {
  const greetTemplate = \`hello 
 world\`;
  return greetTemplate;
}
export {
  sayHello
};
"
`;

exports[`EsBuild tests getBundleJs - newline string 1`] = `
"// src/test-fixtures/newline-string.fixture.ts
function sayHello() {
  const greetString = "hello\\nworld";
  return greetString;
}
export {
  sayHello
};
"
`;

exports[`EsBuild tests getBundleJs - esbuild-define with ENABLE_FEATURE=false eliminates feature branch 1`] = `
"// src/test-fixtures/define.fixture.ts
function test_define_flag(input) {
  return input;
}
export {
  test_define_flag
};
"
`;

exports[`EsBuild tests getBundleJs - esbuild-define with ENABLE_FEATURE=true eliminates early return 1`] = `
"// src/test-fixtures/define.fixture.ts
function test_define_flag(input) {
  return "feature active: " + input;
}
export {
  test_define_flag
};
"
`;
